@@ -3222,7 +3222,10 @@ class tslib_cObj {
 					if ($wrapAlign)	{$content=$this->wrap($content, '<div style="text-align:'.$wrapAlign.';">|</div>');}
 				}
 				if ($conf['typolink.']){$content=$this->typolink($content, $conf['typolink.']);}
-
+				if (is_array($conf['TCAselectItem.'])) {$content=$this->TCAlookup($content,$conf['TCAselectItem.']);}
+					
+			
+				
 					// Spacing
 				if ($conf['space']){$content=$this->wrapSpace($content, $conf['space']);}
 				$spaceBefore = '';
@@ -4953,8 +4956,45 @@ class tslib_cObj {
 	}
 
 
+	/**
+	 * looks up the incoming value in the defined TCA configuration
+	 * 
+	 * works only with TCA-type 'select' and options defined in 'items'
+	 * 
+	 * @todo would be nice it this function basically looked up any type of value, db-relations etc
+	 *
+	 * @param mixed $inputValue	commaseperated list of values to look up
+	 * @param array $conf		TS-configuration array, see TSref for details
+	 * @return string			String of translated values, seperated by $delimiter. If no matches were found, the input value is simply returned.
+	 */
+	function TCAlookup($inputValue,$conf) {
+		global $TCA;	
+	
+		$table = $conf['table'];
+		$field = $conf['field'];
+		$delimiter = $conf['delimiter']?$conf['delimiter']:' ,';
 
+		$GLOBALS['TSFE']->includeTCA();
 
+		if (is_array($TCA[$table]) && is_array($TCA[$table]['columns'][$field]) && is_array($TCA[$table]['columns'][$field]['config']['items'])) {
+			$values = t3lib_div::trimExplode(',',$inputValue);
+			foreach ($values as $value) {
+					// Traverse the items-array...
+				reset($TCA[$table]['columns'][$field]['config']['items']);
+				while(list($key,$item)=each($TCA[$table]['columns'][$field]['config']['items']))	{
+						// ... and return the first found label where the value was equal to $key
+					if (!strcmp($item[1],trim($value)))	$output[] = $GLOBALS['TSFE']->sL($item[0]);
+				}
+
+			}
+			$returnValue = implode($delimiter,$output);
+		} else {
+			$returnValue = $inputValue;
+		}
+		return $returnValue;
+	}
+
+	
 
 
 
